# jammond

./: .gitignore  README.md
code/: README.md
code/controller/: README.md  controller.ino
code/controller/esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.old
code/controller/esp-idf/main/: CMakeLists.txt  jammond-controller.c
code/midi-audio-interface/: HARDWARE_VALIDATION.md  README.md
code/midi-audio-interface/esp-idf/: CMakeLists.txt
code/midi-audio-interface/esp-idf/main/: CMakeLists.txt  idf_component.yml  jammond-midi-audio.c
code/tonewheel/: tonewheel.ino
code/usb-audio/: README.md
code/usb-audio/esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.old
code/usb-audio/esp-idf/components/dac/: CMakeLists.txt
code/usb-audio/esp-idf/components/dac/include/: dac.h
code/usb-audio/esp-idf/components/dac/src/: dac.c
code/usb-audio/esp-idf/components/ring_buffer/: CMakeLists.txt
code/usb-audio/esp-idf/components/ring_buffer/include/: ring_buffer.h
code/usb-audio/esp-idf/components/ring_buffer/src/: ring_buffer.c
code/usb-audio/esp-idf/components/synth/: CMakeLists.txt
code/usb-audio/esp-idf/components/synth/include/: synth.h
code/usb-audio/esp-idf/components/synth/src/: synth.c
code/usb-audio/esp-idf/components/usb_audio_interface/: CMakeLists.txt  idf_component.yml
code/usb-audio/esp-idf/components/usb_audio_interface/include/: usb_audio_interface.h
code/usb-audio/esp-idf/components/usb_audio_interface/src/: usb_audio_interface.c
code/usb-audio/esp-idf/main/: CMakeLists.txt  usb-audio.c
